# ChangeLog for dev-python/zsi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/zsi/ChangeLog,v 1.19 2011/07/09 22:06:40 xarthisius Exp $

  09 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> zsi-2.0.ebuild,
  zsi-2.1_alpha1.ebuild:
  ppc stable wrt #367951. Dropped ~ppc64

  19 Jun 2011; Raúl Porcel <armin76@gentoo.org> zsi-2.0.ebuild,
  zsi-2.1_alpha1.ebuild:
  Drop sparc keywords

  31 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> zsi-2.1_alpha1.ebuild:
  x86 stable wrt bug #367951

  23 May 2011; Markos Chandras <hwoarang@gentoo.org> zsi-2.1_alpha1.ebuild:
  Stable on amd64 wrt bug #367951

  18 May 2011; Christoph Mende <angelos@gentoo.org> zsi-2.1_alpha1.ebuild:
  Remove pyxml dependency

  15 Oct 2010; Brent Baude <ranger@gentoo.org> zsi-2.0.ebuild:
  Marking zsi-2.0 ppc for bug 321897

  10 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zsi-2.0.ebuild, zsi-2.1_alpha1.ebuild:
  Update EAPI. Call python_pkg_setup().

  25 May 2010; Christoph Mende <angelos@gentoo.org> zsi-2.0.ebuild,
  zsi-2.1_alpha1.ebuild:
  Force python2 since the build system is broken on python3

*zsi-2.1_alpha1 (23 May 2009)

  23 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  +zsi-2.1_alpha1.ebuild:
  Version bump wrt #266990. This package is only used by media-sound/sonata
  for lyrics, which seem to work fine with this release.

  13 Mar 2009; Tiago Cunha <tcunha@gentoo.org> zsi-2.0.ebuild:
  stable sparc

  24 Feb 2009; Joseph Jezak <josejx@gentoo.org> zsi-2.0.ebuild:
  Marked ~ppc for bug #222011.

  06 Aug 2008; Jesus Rivero <neurogeek@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  21 Apr 2008; Raúl Porcel <armin76@gentoo.org> zsi-2.0.ebuild:
  Add ~sparc

  13 Mar 2008; Dawid Węgliński <cla@gentoo.org> zsi-2.0.ebuild:
  Stable on x86 (bug #213264)

  13 Mar 2008; Christoph Mende <angelos@gentoo.org> zsi-2.0.ebuild:
  Stable on amd64, bug #213264
